--- a/HelloDoc/Views/AdminDash/AdminTablePending.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTablePending.cshtml
@@ -173,18 +173,18 @@
                             </a>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">
+                            <button class="dropdown-item" onclick="clearmodel(this)" data-clearcaseid="@item.requestid">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
                                     <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
                                 </svg>Clear Case
-                            </a>
+                            </button>
                         </li>
                         <li>
-                            <a class="dropdown-item" href="#">
+                            <button class="dropdown-item" onclick="sendagreement(this)" data-email="@item.Email" data-phoneno="@item.PhoneNumber_P">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
                                     <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
                                 </svg>Send Agreement
-                            </a>
+                            </button>
                         </li>
                     </ul>
                 </td>
@@ -345,5 +345,25 @@
         bsModal.show();
         const requestid = btn.getAttribute('data-transferid');
         document.getElementById('trarequest').value = requestid;
+ }  
+ 
+ function clearmodel(btn){
+        const myModal = document.getElementById("ClearCaseModal");
+        var bsModal = new bootstrap.Modal(myModal);
+        bsModal.show();
+        const requestid = btn.getAttribute('data-clearcaseid');
+        document.getElementById('clearcase').value = requestid;
+ }
+
+    function sendagreement(btn) {
+        const myModal = document.getElementById("SendAgreementModal");
+        var bsModal = new bootstrap.Modal(myModal);
+        bsModal.show();
+        // const requestid = btn.getAttribute('data-clearcaseid');
+        // document.getElementById('clearcase').value = requestid;
+        const email = btn.getAttribute('data-email');
+        document.getElementById('agreementemail').value= email;
+        const phoneno = btn.getAttribute('data-phoneno');
+        document.getElementById('agreementphone').value = phoneno;
  }
 </script>
