--- a/HelloDoc/Views/Shared/_Layout-1.cshtml
+++ b/HelloDoc/Views/Shared/_Layout-1.cshtml
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="container-fluid">
-            <div class="row border border-bottom">
+            <div class="row border border-bottom shadow">
                 <!-- -----------------nav--------------- -->
                 <div class="col col-12 d-flex mb-1 flex-row justify-content-between">
                     <div class="doct-logo">
@@ -53,7 +53,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted ">
+    <footer class="footer text-muted ">
         <div class="d-flex flex-row justify-content-end align-items-center bg-dark text-white pe-3 footer position-absolute bottom-0 w-100">
             <span>Terms Of Condition | Privacy Policy</span>
         </div>
