--- a/HelloDoc/Views/AdminDash/AdminTablePending.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTablePending.cshtml
@@ -180,7 +180,8 @@
                             </button>
                         </li>
                         <li>
-                            <button class="dropdown-item" onclick="sendagreement(this)" data-email="@item.Email" data-phoneno="@item.PhoneNumber_P">
+                            <button class="dropdown-item" onclick="sendagreement(this)" data-email="@item.Email" data-phoneno="@item.PhoneNumber_P"
+                                    data-sendagreementid="@item.requestid">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="me-3" width="16" height="16" fill="currentColor" class="bi bi-ban" viewBox="0 0 16 16">
                                     <path d="M15 8a6.97 6.97 0 0 0-1.71-4.584l-9.874 9.875A7 7 0 0 0 15 8M2.71 12.584l9.874-9.875a7 7 0 0 0-9.874 9.874ZM16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0" />
                                 </svg>Send Agreement
@@ -359,8 +360,8 @@
         const myModal = document.getElementById("SendAgreementModal");
         var bsModal = new bootstrap.Modal(myModal);
         bsModal.show();
-        // const requestid = btn.getAttribute('data-clearcaseid');
-        // document.getElementById('clearcase').value = requestid;
+        const requestid = btn.getAttribute('data-sendagreementid');
+        document.getElementById('sendagreementid').value = requestid;
         const email = btn.getAttribute('data-email');
         document.getElementById('agreementemail').value= email;
         const phoneno = btn.getAttribute('data-phoneno');
