--- a/HelloDoc/Views/Request/ReviewAgreement.cshtml
+++ b/HelloDoc/Views/Request/ReviewAgreement.cshtml
@@ -5,6 +5,7 @@
 @{
     ViewData["Title"] = "ReviewAgreement";
     Layout = "~/Views/Shared/_Layout-1.cshtml";
+     
 }
 
 <!DOCTYPE html>
@@ -22,18 +23,44 @@
 
 <body>
     
+    @* ------------------------------ *@
+    <div class="modal fade" id="canclemodal" tabindex="-1" aria-labelledby="exampleModalLabel">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-info">
+                    <h1 class="modal-title fs-5  text-white" id="exampleModalLabel">Confirm Cancellation</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form asp-action="CancelAgreement" asp-route-id="@ViewBag.requestid">
+                    <div class="modal-body">
+                        <p> Patient Name: @ViewBag.name</p>
+                        <div class="form-floating mt-3">
+                            <textarea class="form-control"  name="Notes" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
+                            <label for="floatingTextarea2">provide Additional Notes</label>
+                        </div>
+
+                    </div>
+                    <div class="modal-footer">
+                        <div class="d-flex justify-content-end mt-3">
+                            <button type="submit" class="btn btn-info">Confirm</button>
+                            <button type="button" data-bs-dismiss="modal" class="btn btn-outline-info ms-3">cancle</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    @* ------------------------------ *@
    
             <!-- -----------------form-------------------------- -->
             <div class="container mt-4 ">
                 <section>To Provide best medical service, we cannot determine the cost right away. If you agree to our service, so we will provide care and follow-up untill all care is completed. So with this points,if you like us to provide care to you click "Agree" and we'll get started immediately, if you do not agree simply click "Cancel"'</section>
                 <div class="row mt-5">
                     <div class="col-6 text-center">
-                        <form>
-                            <button class="btn btn-success text-center text-white" type="submit">IAgree</button>
-                        </form>
-                    </div>
+                <a asp-action="Agree" asp-controller="Request" asp-route-id="@ViewBag.requestid"> <button class="btn btn-success text-center text-white" type="submit">Agree</button></a>
+            </div>
                     <div class="col-6 text-center">
-                        <button class="btn btn-danger text-center text-white" data-bs-toggle="modal" data-bs-target="#cancelagreementmodal">Cancel</button>
+                <button class="btn btn-danger text-center text-white" onclick="openModal()">Cancel</button>
                     </div>
                 </div>
             </div>
@@ -47,3 +74,21 @@
 </body>
 
 </html>
+<script>
+    function openModal(btn) {
+        console.log("Button clicked");
+
+        const myModal = document.getElementById("canclemodal");
+        var bsModal = new bootstrap.Modal(myModal);
+        bsModal.show();
+        const requestid = btn.getAttribute('data-requestid');
+        document.getElementById('requestid').value = requestid;
+        const name = btn.getAttribute('data-name');
+        document.getElementById('text').textContent = name;
+    }
+
+
+    
+
+
+</script>
