--- a/HelloDoc/Views/AdminDash/AdminTableUnPaid.cshtml
+++ b/HelloDoc/Views/AdminDash/AdminTableUnPaid.cshtml
@@ -54,7 +54,7 @@
       
             
             
-                <tr class="text-light" style="@color" >
+                <tr class="text-light" style="background-color: @color;" >
                     <td class="my-auto">
                         @item.Name
                     </td>
@@ -66,8 +66,6 @@
                         </button>
                     </td>
                    
-
-
                     <td class="my-auto">physician Name</td>
                     <td class="my-auto">Date Of Service</td>
                     <td class="my-auto ">
